# om-file-format

./: .gitignore  .releaserc  Cargo.toml  Cross.toml  Package.swift  README.md  package-lock.json  package.json
.github/workflows/: release.yml  rust-test.yml  rust-tests.yml  swift-test.yml  test.yml
Sources/OmFileFormatSwift/: OmFileFormat.swift  OmFileReader2.swift
Swift/: README.md
Swift/OmFileFormat/: FileExtension.swift  Interpolation.swift  LegacyReader.swift  LegacyWriter.swift  MmapFile.swift  OmBufferedWriter.swift  OmFileDataTypeProtocol.swift  OmFileFormat.swift  OmFileReader.swift  OmFileReader2.swift  OmFileReaderAsync.swift  OmFileWriter.swift  OmFileWriter2.swift  ReaderBackend.swift  ReaderBackendAsync.swift  WriterBackend.swift
Tests/OmFileFormatTests/: OmFileFormatTests.swift
c/include/: bitutil.h  conf.h  delta2d.h  om_common.h  om_decoder.h  om_encoder.h  om_variable.h  sse_neon.h
c/src/: bitpack.c  bitunpack.c  bitutil.c  delta2d.c  fp.c  om_common.c  om_decoder.c  om_encoder.c  om_variable.c  vint.c  vp4c.c
rust/om-file-format-sys/: Cargo.toml  README.md  build.rs
rust/om-file-format-sys/src/: lib.rs
